clusters/management-hub/traefik-ext/dashboard-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-ext-dashboard
  namespace: traefik-ext
  annotations:
    kubernetes.io/ingress.class: traefik-ext
    external-dns.alpha.kubernetes.io/hostname: traefik-ext.nwlnexus.net
    external-dns.alpha.kubernetes.io/target: ing.mgmt.nwlnexus.net
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`traefik-ext.nwlnexus.net`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: traefik-ext-dashboard-tls
